[metadata]
description-file = README.md

[wheel]
universal = 1

[options]
install_requires =
    beautifulsoup4==4.11.1
    bs4==0.0.1
    certifi==2022.12.7
    charset-normalizer==3.0.1
    geographiclib==2.0
    geojson==2.5.0
    geopy==2.3.0
    idna==3.3
    jellyfish==0.6.1
    lxml==4.9.2
    numpy==1.22.3
    pandas==1.4.2
    pathlib==1.0.1
    pycountry==22.3.5
    python-dateutil==2.8.2
    pytz==2022.1
    requests==2.28.2
    six==1.16.0
    soupsieve==2.3.2.post1
    urllib3==1.26.14
    us==2.0.2